--- a/HackerrankSolution.csproj
+++ b/HackerrankSolution.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReverseGame.cs" />
     <Compile Include="Sorting.cs" />
+    <Compile Include="StrangeGridAgain.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
