--- a/HackerrankSolution.csproj
+++ b/HackerrankSolution.csproj
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Compile Include="ArmyGame.cs" />
     <Compile Include="BestDivisor.cs" />
-    <Compile Include="InterviewPreparationKit\ArrayManipulation.cs" />
+    <Compile Include="InterviewPreparationKit\ArraySolution\ArrayManipulation.cs" />
     <Compile Include="InterviewPreparationKit\CloudJumping.cs" />
     <Compile Include="ConnectingTowns.cs" />
     <Compile Include="CuttingPaper.cs" />
@@ -54,11 +54,12 @@
     <Compile Include="FindThePoint.cs" />
     <Compile Include="HallowenParty.cs" />
     <Compile Include="Helper.cs" />
-    <Compile Include="InterviewPreparationKit\LeftRotation.cs" />
-    <Compile Include="InterviewPreparationKit\MinimumSwap.cs" />
-    <Compile Include="InterviewPreparationKit\NewYearChaos.cs" />
+    <Compile Include="InterviewPreparationKit\ArraySolution\LeftRotation.cs" />
+    <Compile Include="InterviewPreparationKit\ArraySolution\MinimumSwap.cs" />
+    <Compile Include="InterviewPreparationKit\ArraySolution\NewYearChaos.cs" />
+    <Compile Include="InterviewPreparationKit\DictionaryHashmaps\RansomNote.cs" />
     <Compile Include="InterviewPreparationKit\RepeatedString.cs" />
-    <Compile Include="InterviewPreparationKit\TwoDArray.cs" />
+    <Compile Include="InterviewPreparationKit\ArraySolution\TwoDArray.cs" />
     <Compile Include="MaxPrimeFactor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
