--- a/HackerrankSolution.csproj
+++ b/HackerrankSolution.csproj
@@ -60,8 +60,21 @@
     <Compile Include="InterviewPreparationKit\DictionaryHashmaps\RansomNote.cs" />
     <Compile Include="InterviewPreparationKit\RepeatedString.cs" />
     <Compile Include="InterviewPreparationKit\ArraySolution\TwoDArray.cs" />
+    <Compile Include="Leetcode\ArrayString\AddBinary.cs" />
+    <Compile Include="Leetcode\ArrayString\ArrayPartition.cs" />
     <Compile Include="Leetcode\ArrayString\DiagonalTraverse.cs" />
+    <Compile Include="Leetcode\ArrayString\LongestPrefix.cs" />
+    <Compile Include="Leetcode\ArrayString\PascalTriangle.cs" />
+    <Compile Include="Leetcode\ArrayString\RemoveDuplicate.cs" />
+    <Compile Include="Leetcode\ArrayString\RemoveElement.cs" />
+    <Compile Include="Leetcode\ArrayString\Reverse.cs" />
+    <Compile Include="Leetcode\ArrayString\ReverseWord.cs" />
+    <Compile Include="Leetcode\ArrayString\RotateArray.cs" />
+    <Compile Include="Leetcode\ArrayString\SearchString.cs" />
     <Compile Include="Leetcode\ArrayString\SpiralMatrix.cs" />
+    <Compile Include="Leetcode\ArrayString\SubArray.cs" />
+    <Compile Include="Leetcode\ArrayString\TwoSum.cs" />
+    <Compile Include="Leetcode\ReplaceElement.cs" />
     <Compile Include="MaxPrimeFactor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
